--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </head>
 <body>
-    <div id="button">Buttons</div>
+    <div id="button">Button</div>
 </body>
 </html>
