--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </head>
 <body>
-    <div id="button">Buttons</div>
+    <div id="a-app">
+        1
+    </div>
 </body>
 </html>
