--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,13 @@
     <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </head>
 <body>
+    <div class="app" id="nav">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+    </div>
     <div id="a-app">
-        1
+
     </div>
 </body>
 </html>
